--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "vscode-xs",
-	"displayName": "AoE2 XS Scripting",
-	"description": "AoE2 XS Support for VSC",
-	"publisher": "Divy",
-	"version": "1.0.16",
+	"name": "age3xs",
+	"displayName": "AoE3 XS Scripting",
+	"description": "Language support for AoE3 XS scripting",
+	"publisher": "AlistairJah",
+	"version": "1.0.0",
 	"engines": {
 		"vscode": "^1.46.0"
 	},
@@ -13,12 +13,12 @@
 	"license": "See LICENSE.md",
 	"icon": "icon.png",
 	"bugs": {
-		"url": "https://github.com/Divy1211/vsc-xs-support/issues"
+		"url": "https://github.com/thinotmandresy/age3-xs/issues"
 	},
-	"homepage": "https://github.com/Divy1211/vsc-xs-support",
+	"homepage": "https://github.com/thinotmandresy/age3-xs",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Divy1211/vsc-xs-support.git"
+		"url": "https://github.com/thinotmandresy/age3-xs.git"
 	},
 	"keywords": [
 		"vscode",
@@ -37,8 +37,8 @@
 			{
 				"id": "xs",
 				"aliases": [
-					"External Subroutine",
-					"xs"
+					"AoE3 XS",
+					"XS"
 				],
 				"extensions": [
 					".xs"
